Update af Hardware afsnit med Tommy's tilføjelser

--- a/report/text/hardware2.tex
+++ b/report/text/hardware2.tex
@@ -23,22 +23,25 @@ In conclusion the platform chosen is Arduino. Arduino was chosen because the uni
 In order for the person using the system to identify themselves, there has to be some form of hardware identification. This hardware identification has to be unique for that person, so that the system can find out the allowed time of the desired activity. Several factors have to be considered when choosing what hardware identification method to use, such as cost, user friendliness and security. Following is a comparison between some of the hardware identification methods available.
 
 \subsubsection{RFID}
-RFID, short for Radio-frequency Identification, is a method of using either passive or active tags for transferring data between a reader and a tag. A tag is an embedded chip with an antenna, that when receiving power transmits the data on the chip to any readers within range. Active tags have their own power source and thus can be scaled to emit their data over long distances. Passive tags on the other hand do not have an internal power source, and instead is powered by the reader via magnetic fields. This makes passive tags work on smaller ranges. A tag can be compared to a bar code, with the difference being that tags scale much better when needing more data storage and the tag does not have to be visible, i.e. it can be embedded into for example key-cards, jewelry and such.
+RFID, \fixme{Referance til dokumentation af RFID} short for Radio-frequency Identification, is a method of using either passive or active tags for transferring data between a reader and a tag. A tag is an embedded chip with an antenna, that when receiving power transmits the data on the chip to any readers within range. Active tags have their own power source and thus can be scaled to emit their data over long distances. Passive tags on the other hand do not have an internal power source, and instead is powered by the reader via magnetic fields. This makes passive tags work on smaller ranges. A tag can be compared to a bar code, with the difference being that tags scale much better when needing more data storage and the tag does not have to be visible, i.e. it can be embedded into for example key-cards, jewelry and such.
 
 \subsubsection{NFC}
 NFC, short for Near Field Communication, is a set of standards for the same technology that RFID uses. The differences between them is that NFC is a strict standard, uses only passive tags and only works over small distances. NFC is also the technology being embedded in smartphones, which means that the projects system could be made compatible with apps.
 
 \subsubsection{Fingerprint}
-Fingerprint is a method of recognizing whether a persons fingerprint matches another already scanned fingerprint. A number of technologies can be used to scan a persons fingerprint, such as optical and ultrasonic. An algorithm is also needed to compare certain features of the fingerprint in order to be able to compare between fingerprints. One of the advantages of fingerprint is that the only equipment needed is the scanner and something to compare them, this means that the cost could be kept down. One of the disadvantages of fingerprint is that it has been shown that some readers can be fooled by printing a fingerprint unto paper or using silicone to make a fake fingerprint. Another disadvantage is that it has been shown that children fingerprint change over time as they grow up, which could mean that the fingerprint has to be scanned again after a while.
+Fingerprint is a method of recognizing whether a persons fingerprint matches another already scanned fingerprint. A number of technologies can be used to scan a persons fingerprint, such as optical and ultrasonic. An algorithm is also needed to compare certain features of the fingerprint in order to be able to compare between fingerprints. One of the advantages of fingerprint is that the only equipment needed is the scanner and something to compare them, this means that the cost could be kept down. Fingerprints also have some disadvantages. One of the disadvantages is gathering the fingerprints of all familie members where as other methods can be established by on person will fingerprints require all members are involved in the setup process. Another disadvantage is that it has been shown that children fingerprint change over time as they grow up, which could mean that the fingerprint has to be scanned again after a while. Fingerprints is also characterised as person informaion and therefore need extra securety measures. 
 
 \subsubsection{Iris Recognition}
-Iris Recognition is a method of scanning and comparing the iris of two eyes. Although the technology is somewhat new, it is already in use many places. Strengths of iris recognition is that it is fast, with comparisons being in the millions for single-core CPUs. Advantages of iris recognition is speed and accuracy. One disadvantage of iris recognition is that a high quality camera has to be used in order for the camera to pick up on small details. Iris scanners can like fingerprints be fooled using a high quality image printed on paper. Another disadvantage is that it has been shown that surgical procedures can change iris' so that the scanner can not recognize that person.
+Iris Recognition\fixme{referance http://www.irisid.com/} is a method of scanning and comparing the iris of two eyes. The technology is somewhat new and have many good qualities. Our iris is one of the most uniq traits as human and therefore is finding one the same iris as you is very on likely. The uniqness of iris is also very characteristic and therefor easy to distinguish if two irises is a match and is therefore gives at more secure analasys. As a new technology is a iris scanner not cheap and is not simple to implement i household system with the need for many scanners.    
+   %Although the technology is somewhat new, it is already in use many places. Strengths of iris recognition is that it is fast, with comparisons being in the millions for single-core CPUs. Advantages of iris recognition is speed and accuracy. One disadvantage of iris recognition is that a high quality camera has to be used in order for the camera to pick up on small details. Iris scanners can like fingerprints be fooled using a high quality image printed on paper. Another disadvantage is that it has been shown that surgical procedures can change iris' so that the scanner can not recognize that person.
 
 \subsection{Conclusion - Identification}
-In conclusion the identification chosen is RFID. RFID was originally not chosen, instead NFC was chosen. The reason for choosing RFID was that it was what the university already had, and all of the practices of used with RFID can be translated unto NFC. The reason for choosing NFC over RFID, is that it is a well defined standard, it is compatible with the technology used in smartphones and it is short range so no accidental reads happen. The reason for choosing NFC/RFID over fingerprint is that the security of fingerprints is not that good and the possibility of a child's fingerprint changing too much. The reason for choosing NFC/RFID over iris is primarily cost, as the cost of a high quality camera is too much as multiple cameras would be needed.
+In conclusion the identification chosen is RFID. RFID was originally not chosen, instead NFC was chosen. The RFID for choosen because it was easyly accessible, and all of the practices of used with RFID can be translated unto NFC. The reason for choosing NFC over RFID, is that it is a well defined standard, it is compatible with the technology used in smartphones and it is short range so no accidental reads happen. The reason for choosing NFC/RFID over fingerprint is that the security need for fingerprints is do not scale with simplisity and the possibility of a child's fingerprint changing too much. The reason for choosing NFC/RFID over iris is primarily cost, as the cost of a high quality camera is too much as multiple cameras would be needed.
 
 \section{Servers}
 In order to maintain the wast amount of information collected from the users and in order to offer a graphical interface to add rules, permissions and chores to the system a server setup will be needed.\\
+Such server work from a private home or collected global server, maintained by the manufacturer of the system.\\
+
 We here list the pros and cons of having a decentralized server setup versus centralized server setup.\\
 
 \textbf{Decentralized Server Setup}\\
