small addition of text

--- a/report/text/api.tex
+++ b/report/text/api.tex
@@ -1,7 +1,7 @@
 \chapter{The API}
 This chapter will explain the design and implementation of the API for this project.
 \section{Design}
-The API started with one clear goal, to be the middleman between the controllers and our database. The API's main purpose was to abstract away the need for the controllers to work directly with the database. With this in mind the API should also be as simple as possible, which lead to the API having only three actions. The three actions are \texttt{status}, \texttt{turn on} and \texttt{turn off}. \\
+The API started with one clear goal, to be the middleman between the controllers and our database. The API's main purpose was to abstract away the need for the controllers to work directly with the database, along with it meaning more security for the database. With this in mind the API should also be as simple as possible, which lead to the API having only three actions. The three actions are \texttt{status}, \texttt{turn on} and \texttt{turn off}. \\
 \texttt{Status}' job is a way for the controller to check up on if there have been any changes in time remaining for the user. This means that \texttt{status} has to check if there are any rules that will cut the user off before they run out of points. If there are no rules that interferes then it should calculate the time remaining again for the user and return that. \\
 \texttt{Turn on}'s main function is for the controller to request for it to turn on. This means that \texttt{turn on} should check to see if the controller can be turned on, calculate the time remaining, turn on the controller inside the database and finally return that. When checking to see if the controller can be turned on, \texttt{turn on} should check both that the user has enough points for at least a minute of on time and that there are no rules that are preventing the controller from turning on. \\
 \texttt{Turn off}'s main function is for the controller to tell the API that it wants to turn off. This means that \texttt{turn off} should check if it is the same user who is turning the controller off and if it is not the same user report an error. \texttt{turn off} should then calculate the time spent on, calculate how many points to remove from the user and then remove that many. Finally it should return the time spent and the points removed.
