--- a/report/text/overALLImplementation.tex
+++ b/report/text/overALLImplementation.tex
@@ -1,4 +1,4 @@
-\chapter{MOM Implementation}
+\chapter{Overview of the Implementation}
 
 In the previous chapters we looked at the design and implementation of the different system part there are in the Media-Online Management (MOM).
 In this chapter we are going to show how it all of the parts are working together.
@@ -14,7 +14,7 @@ On the centralized server there are five components: the Website, API, Daemon, F
 	\label{fig:deployment}
 \end{figure}
 
-\textbf{something with internet of things}
+
 
 Before going explaining the testing of MOM, we are going to summarize some of the conclusion that the previous chapters came to.
 
