--- a/report/text/problemStatement.tex
+++ b/report/text/problemStatement.tex
@@ -1,10 +1,10 @@
 \chapter{Problem Statement}
-As the prevues chapter explained, children's increase in media usage is becoming a problem. This is a problem we want to solve by the usage of modern technology, internet applications and physical recognition of users.\\
+As the previous chapter explained, children's increase in media usage is becoming a problem. This is a problem we want to solve by the usage of modern technology, internet applications and physical recognition of users.\\
 In this chapter a formal definition of the problem is written together with an emphasis on what challenges this problem rises.\\
 
 
 \begin{verse}
-\textit{Parents are not able of helping their children administer their IT/TV consumption.\\
+\textit{Parents are not able to help their children administer their IT/TV consumption.\\
 This results in their children getting a lessened learning ability, a bad sleeping pattern and a higher risk of type 2 diabetes.\\
 How can hardware identification and webservices give parents the tools to help their children manage their media consumption?}
 	\begin{itemize}
